spotlessApply & npx prettier